<resources>
    <string name="app_name">GasTrackerApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Gas Tracker</string>
    <string name="action_settings">Menu</string>
    <string name="action_stations">Show stations</string>
    <string name="new_station">Add station</string>
    <string name="point_symbol">.</string>
    <string name="action_clusters">Show clusters</string>
    <string name="action_route">New route</string>
    <string name="action_clear">Clear map</string>
    <string name="auto_location">Auto location</string>
    <string name="action_fuelType">Fuel type</string>
</resources>
