<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_station"
        android:icon="@drawable/add_location"
        android:title="@string/new_station"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_fuelType"
        android:title="@string/action_fuelType"
        android:icon="@drawable/web_hi_res_512_round"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stations"
        android:title="@string/action_stations"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_route"
        android:title="@string/action_route"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:checkable="true"
        android:checked="true"
        android:title="@string/auto_location" />

    <item
        android:id="@+id/action_clusters"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_clusters" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="never" />

</menu>